<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:background="@color/background_login" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/description_imageView_DFWExcellerator_logo"
        android:layout_weight="1"
        android:id="@+id/companyLogo"
        android:src="@drawable/logo_login" />

    <ProgressBar
        android:id="@+id/progressBar_login"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_weight="4" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_input_text_view_login"
                android:hint="@string/hint_user_email"
                android:textColorHint="@color/text_hint_login"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_input_text_view_login"
                android:hint="@string/hint_user_password"
                android:textColorHint="@color/text_hint_login"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_auto_login"
                android:textColor="@color/text_check_box_login"
                android:id="@+id/checkBoxAutoLogin" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_show_password"
                android:textColor="@color/text_check_box_login"
                android:id="@+id/checkBoxShowPassword" />

            <Button
                android:id="@+id/button_log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_between_login_buttons"
                android:text="@string/button_login"
                android:textColor="@color/text_button_login"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/button_forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_between_login_buttons"
                android:text="@string/button_forget_password"
                android:textColor="@color/text_button_login"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_between_login_buttons"
                android:text="@string/button_register"
                android:textColor="@color/text_button_login"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_between_ntx_logo_and_buttons_in_login_activity"
                android:src="@drawable/ntx_small"
                android:contentDescription="@string/description_imageView_ntx_logo" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
